docs: Expand and refine Javadoc comments for improved clarity and detail
- Enhanced method-level Javadoc across multiple classes with detailed parameter, return value, and exception descriptions.
- Updated constructor and core logic documentation in key plugins and utilities for better developer understanding.
- Refined explanations in `BaseJavaFXMojo`, `JavaFXRunMojo`, and others to clarify purpose and behavior.
- Adjusted package restructuring in `CheckAndCast` for consistency.